tests/max_encoded_len_ui/not_encode.stderr
error[E0277]: the trait bound `NotEncode: WrapperTypeEncode` is not satisfied
  --> $DIR/not_encode.rs:3:10
   |
3  | #[derive(MaxEncodedLen)]
   |          ^^^^^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NotEncode`
   |
  ::: $WORKSPACE/src/max_encoded_len.rs
   |
   | pub trait MaxEncodedLen: Encode {
   |                          ------ required by this bound in `MaxEncodedLen`
   |
   = note: required because of the requirements on the impl of `Encode` for `NotEncode`
   = note: this error originates in the derive macro `MaxEncodedLen` (in Nightly builds, run with -Z macro-backtrace for more info)
